--- a/C2/W1/assignment/C2W1_Assignment.ipynb
+++ b/C2/W1/assignment/C2W1_Assignment.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/haadid/C2W1_Cat_Vs_Dogs/blob/main/C2/W1/assignment/C2W1_Assignment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/haadid/DeepL-TFD-Coursera/blob/main/C2/W1/assignment/C2W1_Assignment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "b0179aa5",
       "metadata": {
         "id": "b0179aa5",
@@ -74,14 +74,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "c881d8ff",
       "metadata": {
         "id": "c881d8ff",
         "lines_to_next_cell": 2,
-        "tags": []
+        "tags": [],
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3a9e050b-32a3-43e9-99f8-075e56d764cd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2023-05-26 13:47:12--  https://download.microsoft.com/download/3/E/1/3E1C3F21-ECDB-4869-8368-6DEBA77B919F/kagglecatsanddogs_5340.zip\n",
+            "Resolving download.microsoft.com (download.microsoft.com)... 184.26.84.197, 2600:1413:b000:183::317f, 2600:1413:b000:18c::317f\n",
+            "Connecting to download.microsoft.com (download.microsoft.com)|184.26.84.197|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 824887076 (787M) [application/octet-stream]\n",
+            "Saving to: ‘/tmp/cats-and-dogs.zip’\n",
+            "\n",
+            "/tmp/cats-and-dogs. 100%[===================>] 786.67M  81.2MB/s    in 10s     \n",
+            "\n",
+            "2023-05-26 13:47:22 (75.5 MB/s) - ‘/tmp/cats-and-dogs.zip’ saved [824887076/824887076]\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# If the URL doesn't work, visit https://www.microsoft.com/en-us/download/confirmation.aspx?id=54765\n",
         "# And right click on the 'Download Manually' link to get a new URL to the dataset\n",
@@ -110,15 +132,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "bc3a9fa5",
       "metadata": {
         "id": "bc3a9fa5",
         "tags": [
           "graded"
-        ]
+        ],
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b439bc6d-2d56-4146-9d13-e83e576b251c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "There are 12500 images of dogs.\n",
+            "There are 12500 images of cats.\n"
+          ]
+        }
+      ],
       "source": [
         "# grader-required-cell\n",
         "\n",
@@ -163,7 +198,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "52ef5808",
       "metadata": {
         "cellView": "code",
@@ -195,7 +230,12 @@
         "    None\n",
         "  \"\"\"\n",
         "  ### START CODE HERE\n",
-        "\n",
+        "  os.makedirs(os.path.join(root_path, 'training'))\n",
+        "  os.makedirs(os.path.join(f'{root_path}/training', 'dogs'))\n",
+        "  os.makedirs(os.path.join(f'{root_path}/training', 'cats'))\n",
+        "  os.makedirs(os.path.join(root_path, 'testing'))\n",
+        "  os.makedirs(os.path.join(f'{root_path}/testing', 'dogs'))\n",
+        "  os.makedirs(os.path.join(f'{root_path}/testing', 'cats'))\n",
         "  # HINT:\n",
         "  # Use os.makedirs to create your directories with intermediate subdirectories\n",
         "  # Don't hardcode the paths. Use os.path.join to append the new directories to the root_path parameter\n",
@@ -214,15 +254,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "5c43b630",
       "metadata": {
         "id": "5c43b630",
         "tags": [
           "graded"
-        ]
+        ],
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a2bee698-6197-4f80-8a25-7c3981869386"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/tmp/cats-v-dogs/testing\n",
+            "/tmp/cats-v-dogs/training\n",
+            "/tmp/cats-v-dogs/testing/dogs\n",
+            "/tmp/cats-v-dogs/testing/cats\n",
+            "/tmp/cats-v-dogs/training/dogs\n",
+            "/tmp/cats-v-dogs/training/cats\n"
+          ]
+        }
+      ],
       "source": [
         "# grader-required-cell\n",
         "\n",
